<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ADD8E6"
    android:gravity="center_horizontal"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="right">

        <ImageButton
            android:id="@+id/Btnatras"
            android:layout_width="52dp"
            android:layout_height="46dp"
            android:background="@drawable/atras"
            android:contentDescription="@string/todo"
            tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />

        <ImageButton
            android:id="@+id/BtnSiguiente"
            android:layout_width="52dp"
            android:layout_height="46dp"
            android:background="@drawable/siguiente"
            android:contentDescription="@string/todo" />

    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_seleccion"
        android:textColor="#455A64"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.102" />

    <ImageButton
        android:id="@+id/Animales"
        android:layout_width="257dp"
        android:layout_height="225dp"
        android:background="@drawable/animales_eng"
        android:contentDescription="@string/animales"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.215" />

    <ImageButton
        android:id="@+id/objetos_actividades"
        android:layout_width="224dp"
        android:layout_height="216dp"
        android:background="@drawable/objetos_y_actividades_eng"
        android:contentDescription="@string/objetos_actividades"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.749" />

    <Button
        android:id="@+id/ButtonExamen_final"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/examen_final"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="621dp" />


</LinearLayout>