<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ADD8E6"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="right">

        <ImageButton
            android:id="@+id/Btnatras"
            android:layout_width="52dp"
            android:layout_height="46dp"
            android:background="@drawable/atras"
            android:contentDescription="@string/todo"
            tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />

        <ImageButton
            android:id="@+id/BtnSiguiente"
            android:layout_width="52dp"
            android:layout_height="46dp"
            android:background="@drawable/siguiente"
            android:contentDescription="@string/todo" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_seleccion_sub"
        android:textColor="#455A64"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.102" />

    <ImageButton
        android:id="@+id/animales_acuaticos"
        android:layout_width="242dp"
        android:layout_height="151dp"
        android:background="@drawable/animales_acuaticos_eng"
        android:contentDescription="@string/animales_acuaticos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.182"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="245dp"
        android:layout_height="183dp"
        android:background="@drawable/animales_terrestres_eng"
        android:contentDescription="@string/animales_terrestres"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.832" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="241dp"
        android:layout_height="164dp"
        android:background="@drawable/animales_areos_eng"
        android:contentDescription="@string/animales_aereos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.483" />

</LinearLayout>